Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-06-27 (SVN):
    * oslibs/codecs/dos/libmad.a: Recompiled and documented the changes.

2011-06-26 (SVN):
    * dos/mplib.c: Clean up, make all functions static,
    * dos/mplpc.c: Clean up, include mplib.c.
    * hexen2/Makefile: Adjust for the mplib.c change.

2011-06-26 (SVN):
    * dosisms.h: Removed dos_usleep(), made the only caller in sys_dos.c
      to call usleep directly. Removed unused dos_getheapsize function,
      made it a macro expanding to _go32_dpmi_remaining_physical_memory.
      Added new macro DJGPP_NO_INLINES which is not defined by default
      except for debug builds. When DJGPP_NO_INLINES is not defined, use
      djgpp inline versions of inportb, inportw, outportb and outportw
      directly.

2011-06-26 (SVN):
    * dosisms.h: Commented out regs_t which is the same as __dmpi_regs.
      Included dpmi.h.
    * dos_v2.c: Adjusted for regs_t to __dpmi_regs change. Minor cleanup.
    * vid_ext.c, vid_vga.c: No need for dpmi.h include now that dosisms.h
      already includes it.

2011-06-26 (SVN):
    * hexenworld/server/model.c (Mod_LoadFaces): Remove the strncmp call
      for just one "*" character and test for the '*' character instead.

2011-06-25 (SVN):
    * dos_v2.c, in_dos.c, snd_gus.c, snd_sb.c, sys_dos.c: Minor clean up
      for unused globals, missing dos.h includes, etc.

2011-06-25 (SVN):
    * common.h: For dos, define q_str[n]casecmp as str[n]cmpi to avoid
      the actual redirection to them in djgpp libc.

2011-06-25 (SVN):
    * net_udp.c (udp_scan_iface):  Cast the char array to caddr_t when
      assigning it to the ifc_buf member of struct ifconf.

2011-06-25 (SVN):
    * Minor tidy up in DOS networking sources.

2011-06-25 (SVN):
    * net_udp.c, net_wins.c (UDP_CheckNewConnections): Remove redundant
      comment.

2011-06-24 (SVN):
    * Updated the documentation after the default audio driver changes.